--- a/skinlab/hat.html
+++ b/skinlab/hat.html
@@ -135,12 +135,12 @@ DOWNLOAD FILE
 </div>
 
 
-<script src="./hat/js/cropper.min.js"></script>
+<script src="./hat-js/cropper.min.js"></script>
 <script src="https://unpkg.com/konva@7.2.5/konva.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-<script src="./hat/js/angular.min.js" type="text/javascript"></script>
-<script src="./hat/js/angular-sanitize.min.js" type="text/javascript"></script>
-<script src="./hat/js/app.js" type="text/javascript"></script>
+<script src="./hat-js/angular.min.js" type="text/javascript"></script>
+<script src="./hat-js/angular-sanitize.min.js" type="text/javascript"></script>
+<script src="./hat-js/app.js" type="text/javascript"></script>
 
 </body>
 </html><script>
