--- a/skinlab/index.html
+++ b/skinlab/index.html
@@ -70,7 +70,7 @@ Design
 </a>
 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
-<li><a class="dropdown-item" href="DV/skinlab/hat.html">WEARLAB</a></li>
+<li><a class="dropdown-item" href="./hat.html">WEARLAB</a></li>
 </ul>
 </li>
 
