--- a/skinlab/hat.html
+++ b/skinlab/hat.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="./css/main-hat.css">
 
-
+<title>WormDV Connect Wearlab</title>
 
 <style>
 img.wp-smiley,
