--- a/skinlab/index.html
+++ b/skinlab/index.html
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html ng-app="wormfriendsApp">
 <head>
-<title>Skinlab WormDV Connect</title>
+<title>WormDV Connect Skinlab </title>
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="mobile-web-app-capable" content="yes" />
-<meta name="description" content="Skinlab WormDV Connect" />
+<meta name="description" content="VuongHiep.Com" />
 <meta name="keywords" content="skinlab, wormate.io, wormate, io, worm, worms, snake, snakes, game, online, games, web, html5, fun, mmo" />
 <link rel="apple-touch-icon" href="../images/apple-touch-icon.png" />
 <link rel="icon" href="./images/favicon.png" />
@@ -54,7 +54,7 @@ Home
 </a>
 </li>
 <li class="nav-item">
-<a class="nav-link " href="api.whatsapp.com/send?phone=84924623650&amp;text=Xin%20ch%C3%A0o!%20M%C3%ACnh%20%C4%91ang%20d%C3%B9ng%20Whatsapp">
+<a class="nav-link " href="/https://api.whatsapp.com/send?phone=84924623650&amp;text=Xin%20ch%C3%A0o!%20M%C3%ACnh%20%C4%91ang%20d%C3%B9ng%20Whatsapp">
 Active
 </a>
 </li>
@@ -70,6 +70,7 @@ Design
 </a>
 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 
+<li><a class="dropdown-item" href="./index.html">SKINLAB</a></li>
 <li><a class="dropdown-item" href="./hat.html">WEARLAB</a></li>
 </ul>
 </li>
@@ -259,6 +260,11 @@ NO IMAGE
 </div>
 </div>
 </div>
+
+<a class="btn btn-primary" style="visibility: hidden;" id="download" href="javascript:void(0);" download="cropped.jpg">Download</a>
+<hr>
+
+ <iframe width="100%" height="580px" src="https://haylamday.com/skinlab/hat.html" scrolling="no"></iframe>
 
 <style>
         body {
