--- a/skinlab/index.html
+++ b/skinlab/index.html
@@ -8,7 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="mobile-web-app-capable" content="yes" />
-<meta name="description" content="VuongHiep.Com" />
+<meta name="description" content="WormDV Connect" />
 <meta name="keywords" content="skinlab, wormate.io, wormate, io, worm, worms, snake, snakes, game, online, games, web, html5, fun, mmo" />
 <link rel="apple-touch-icon" href="../images/apple-touch-icon.png" />
 <link rel="icon" href="./images/favicon.png" />
