--- a/skinlab/index.html
+++ b/skinlab/index.html
@@ -74,6 +74,16 @@ Design
 <li><a class="dropdown-item" href="./hat.html">WEARLAB</a></li>
 </ul>
 </li>
+    <li class="nav-item dropdown">
+<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+Dowland Extension
+</a>
+<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+
+<li><a class="dropdown-item" href="./WormDV_Connect.zip">Dowland Zip Extension</a></li>
+<li><a class="dropdown-item" href="./ios.user.js">Dowland IOS Script</a></li>
+</ul>
+</li>
 
 </ul>
 </div>
