--- a/skinlab/index.html
+++ b/skinlab/index.html
@@ -103,9 +103,9 @@ Format: png | Size: 1920 x 660 pixel
 </ul>
 </div>
 <div class="col-md-10">
-<div class="docs-demo" style="border: 4px solid #fd0dab; padding: 20px">
+<div class="docs-demo" style="border: 4px solid #000000; padding: 20px">
 <div class="img-container">
-<img src="https://i.imgur.com/HB2ytNv.png" alt="Picture" />
+<img src="https://i.imgur.com/hgq0fKD.png" alt="Picture" />
 </div>
 </div>
 <div class="row" id="actions">
@@ -220,7 +220,7 @@ Download
 <div id="result_skinlab" style="
               margin-top: 5px;
               padding: 30px 10px;
-              border: 4px solid #fd0dab;
+              border: 4px solid #000000;
               color: #fff;
               background-image: url(https://i.imgur.com/lbultXs.png);
               position: relative;
@@ -298,7 +298,7 @@ NO IMAGE
 
         .content-item img {
           width: 100%;
-          background-color: #000;
+          background-color: #000000;
           background-size: cover;
           background-position: center;
           background-repeat: no-repeat;
